@@ -1,3 +1,6 @@
+2014-03-31 Jonathan Olmsted <jpolmsted@gmail.com>
+	* test/testthat/test-Density.R: add density test for shifts in distro
+
 2014-03-28 Jonathan Olmsted <jpolmsted@gmail.com>
 	* R/rtn.R, R/etn.R, R/vtn.R: make checks optional, default behavior unchanged
 	* vignettes/speed.Rnw: add graphical output to vignette
